[package]
authors = ["Sergey Prilutskiy <boogerwooger@mail.ru>", "Dmitry Dulesov <dmitry.dulesov@gmail.com>"]
build = 'build.rs'
description = 'Frame-based node for Evercity green bonds emission project'
edition = '2018'
license = 'Apache-2.0'
name = 'evercity-node'
repository = 'https://github.com/EvercityEcosystem/evercity-substrate'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'evercity-node'

[build-dependencies]
substrate-build-script-utils = '2.0.1'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
evercity-runtime = { path = '../runtime', version = '2.0.0' }

# Substrate dependencies
frame-benchmarking = '2.0.1'
frame-benchmarking-cli = '2.0.1'
pallet-transaction-payment-rpc = '2.0.1'
sc-basic-authorship = '0.8.1'
sc-cli = { features = ['wasmtime'], version = '0.8.1' }
sc-client-api = '2.0.1'
sc-consensus = '0.8.1'
sc-consensus-aura = '0.8.1'
sc-executor = { features = ['wasmtime'], version = '0.8.1' }
sc-finality-grandpa = '0.8.1'
sc-rpc = '2.0.1'
sc-rpc-api = '0.8.1'
sc-service = { features = ['wasmtime'], version = '0.8.1' }
sc-transaction-pool = '2.0.1'
sp-api = '2.0.1'
sp-block-builder = '2.0.1'
sp-blockchain = '2.0.1'
sp-consensus = '0.8.1'
sp-consensus-aura = '0.8.1'
sp-core = '2.0.1'
sp-finality-grandpa = '2.0.1'
sp-inherents = '2.0.1'
sp-runtime = '2.0.1'
sp-transaction-pool = '2.0.1'
substrate-frame-rpc-system = '2.0.1'



