[package]
name = "pallet-everusd-carbon-credits-swap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.serde]
optional = true
features = ['derive']
version = '1.0.124'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[dev-dependencies.serde]
version = '1.0.119'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
pallet-evercity-assets = { default-features = false, version = '0.1.0', git = 'https://github.com/EvercityEcosystem/evercity-assets' }
# pallet-evercity = { default-features = false, version = '0.1.1', git = 'https://github.com/EvercityEcosystem/smart-sustainable-bond', branch = 'add_carbon_credits' }

pallet-evercity = { default-features = false, version = '0.1.1', path = '../evercity'}
pallet-evercity-carbon-credits = { default-features = false, version = '0.1.13', git = 'https://github.com/EvercityEcosystem/carbon-credits', branch = 'unite_create_file_and_annual_report' }

[dev-dependencies]
sp-core = {  version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
pallet-balances = { version = '3.0.0' }
pallet-evercity-accounts = { default-features = false, version = '0.1.7', git = 'https://github.com/EvercityEcosystem/evercity-accounts' }
pallet-evercity-filesign = { default-features = false, version = '0.1.3', git = 'https://github.com/EvercityEcosystem/filesign'}

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-api/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-timestamp/std',
    # 'pallet-evercity-accounts/std',
    # 'pallet-evercity-filesign/std',
]

