[package]
authors = ["Sergey Prilutskiy <boogerwooger@mail.ru>", "Dmitry Dulesov <dmitry.dulesov@gmail.com>"]
description = 'Pallet for Evercity green bonds emission project'
edition = '2018'
homepage = 'https://evercity.io'
license = 'Apache-2.0'
name = 'pallet-evercity'
readme = '../README.md'
repository = 'https://github.com/EvercityEcosystem/evercity-substrate'
version = '0.0.2'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.serde]
optional = true
features = ['derive']
version = '1.0.116'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.impl-trait-for-tuples]
version = "0.1.3"

[dependencies]
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
pallet-timestamp = { default-features = false, version = '2.0.1' }
sp-api = { default-features = false, version = '2.0.1' }

[dev-dependencies]
sp-core = { version = '2.0.1' }
sp-io = { version = '2.0.1' }
sp-runtime = { version = '2.0.1' }
pallet-balances = { version = '2.0.1' }
rand = { version = '0.6' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-api/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-timestamp/std',
]
