[package]
authors = ["Dmitry Dulesov <dmitry.dulesov@gmail.com>"]
description = 'Endowing functions for Evercity green bonds emission project'
edition = '2018'
homepage = 'https://evercity.io'
license = 'Apache-2.0'
name = 'pallet-evercity-transfer'
repository = 'https://github.com/EvercityEcosystem/evercity-substrate'
version = '0.0.3'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }

[dev-dependencies]
sp-core = {  version = '2.0.1' }
pallet-balances = { version = "2.0.1" }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.6'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
